fix alignment of sweet items

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ button {
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
@@ -105,7 +105,7 @@ button {
 .sweets-item {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: space-between;
 }
 
 h1 {
